--- a/dailyReport/march/25-03-09.md
+++ b/dailyReport/march/25-03-09.md
@@ -1,1 +1,13 @@
+# 25-03-09
 
+## 開発に使っているツールについて
+
+### Python開発ツール
+
+ジュピターラボ
+
+たくさんのコードを同時に動かせるので、試行錯誤がしやすいため使っています
+
+### VSCODE
+
+今のところはGitHubにアップするためにしか使っておりません。Rubyのポートフォリオ作成の際、本格稼働するのかな、と思っています
