--- a/dailyReport/march/25-03-09.md
+++ b/dailyReport/march/25-03-09.md
@@ -11,3 +11,8 @@
 ### VSCODE
 
 今のところはGitHubにアップするためにしか使っておりません。Rubyのポートフォリオ作成の際、本格稼働するのかな、と思っています
+
+### 今日の取り組み
+
+v1.3.0完成。ガントチャートからは遅れており、プロジェクトの準備をすることの大変さを実感。
+ガントチャート修正しつつ、できるだけ完成を早めることを期する
